// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <table
        className="appt-tables header-table"
      >
        <tbody>
          <tr>
            <th>
              Date
            </th>
            <th>
              Time
            </th>
            <th>
              Provider Name
            </th>
            <th>
              Phone
            </th>
            <th>
              Scheduler
            </th>
            <th>
              Actions
            </th>
          </tr>
        </tbody>
      </table>
      <table
        className="appt-tables"
      >
        <tbody>
          <tr>
            <th
              className="upcoming-appt-head"
              colSpan={6}
            >
              Upcoming Appointments
            </th>
          </tr>
          <tr>
            <td>
              February 21, 2017
            </td>
            <td>
              5:51 AM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-456-7891
            </td>
            <td>
              Name
            </td>
            <td>
              <button>
                CANCEL
              </button>
            </td>
          </tr>
          <tr>
            <td>
              February 22, 2017
            </td>
            <td>
              5:51 AM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-456-7891
            </td>
            <td>
              Name
            </td>
            <td>
              <button>
                CANCEL
              </button>
            </td>
          </tr>
          <tr>
            <td>
              February 23, 2017
            </td>
            <td>
              5:51 AM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-456-7891
            </td>
            <td>
              Name
            </td>
            <td>
              <button>
                CANCEL
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <table
        className="appt-tables"
      >
        <thead>
          <tr>
            <th
              className="past-appt-head"
              colSpan={6}
            >
              Past Appointments
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              February 7, 2017
            </td>
            <td>
              5:51 AM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-456-7891
            </td>
            <td>
              Name
            </td>
            <td />
          </tr>
          <tr>
            <td>
              February 8, 2017
            </td>
            <td>
              5:51 AM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-456-7891
            </td>
            <td>
              Name
            </td>
            <td />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`With Just Future Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <table
        className="appt-tables header-table"
      >
        <tbody>
          <tr>
            <th>
              Date
            </th>
            <th>
              Time
            </th>
            <th>
              Provider Name
            </th>
            <th>
              Phone
            </th>
            <th>
              Scheduler
            </th>
            <th>
              Actions
            </th>
          </tr>
        </tbody>
      </table>
      <table
        className="appt-tables"
      >
        <tbody>
          <tr>
            <th
              className="upcoming-appt-head"
              colSpan={6}
            >
              Upcoming Appointments
            </th>
          </tr>
          <tr>
            <td>
              February 21, 2017
            </td>
            <td>
              5:51 AM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-456-7891
            </td>
            <td>
              Name
            </td>
            <td>
              <button>
                CANCEL
              </button>
            </td>
          </tr>
          <tr>
            <td>
              February 22, 2017
            </td>
            <td>
              5:51 AM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-456-7891
            </td>
            <td>
              Name
            </td>
            <td>
              <button>
                CANCEL
              </button>
            </td>
          </tr>
          <tr>
            <td>
              February 23, 2017
            </td>
            <td>
              5:51 AM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-456-7891
            </td>
            <td>
              Name
            </td>
            <td>
              <button>
                CANCEL
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`With No Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <div
        className="page-instructions"
      >
        <p>
          Patient has no appointment history
        </p>
      </div>
      <table
        className="appt-tables header-table"
      >
        <tbody>
          <tr>
            <th>
              Date
            </th>
            <th>
              Time
            </th>
            <th>
              Provider Name
            </th>
            <th>
              Phone
            </th>
            <th>
              Scheduler
            </th>
            <th>
              Actions
            </th>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`With only Past Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <table
        className="appt-tables header-table"
      >
        <tbody>
          <tr>
            <th>
              Date
            </th>
            <th>
              Time
            </th>
            <th>
              Provider Name
            </th>
            <th>
              Phone
            </th>
            <th>
              Scheduler
            </th>
            <th>
              Actions
            </th>
          </tr>
        </tbody>
      </table>
      <table
        className="appt-tables"
      >
        <thead>
          <tr>
            <th
              className="past-appt-head"
              colSpan={6}
            >
              Past Appointments
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              February 8, 2017
            </td>
            <td>
              5:51 AM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-456-7891
            </td>
            <td>
              Name
            </td>
            <td />
          </tr>
          <tr>
            <td>
              February 7, 2017
            </td>
            <td>
              5:51 AM
            </td>
            <td>
              Dr Name Name
            </td>
            <td>
              123-456-7891
            </td>
            <td>
              Name
            </td>
            <td />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
